use toList() instead of Collectors.toList()
replace `Stream.collect(Collectors.toList()) ` with `Stream.toList()`