@@ -86,6 +86,6 @@ public class Tls13SelectorTest extends SslSelectorTest {
             return received.size() == 2;
         }, "Expected two receives, got " + received.size());
 
-        assertEquals(asList("0-0", "0-1"), received.stream().map(this::asString).collect(Collectors.toList()));
+        assertEquals(asList("0-0", "0-1"), received.stream().map(this::asString).toList());
     }
 }
