@@ -738,9 +738,9 @@ public class TopicAdminTest {
                         .setPartitionIndex(pInfo.partition())
                         .setLeaderId(pInfo.leader().id())
                         .setLeaderEpoch(234)
-                        .setReplicaNodes(Arrays.stream(pInfo.replicas()).map(Node::id).collect(Collectors.toList()))
-                        .setIsrNodes(Arrays.stream(pInfo.inSyncReplicas()).map(Node::id).collect(Collectors.toList()))
-                        .setOfflineReplicas(Arrays.stream(pInfo.offlineReplicas()).map(Node::id).collect(Collectors.toList()));
+                        .setReplicaNodes(Arrays.stream(pInfo.replicas()).map(Node::id).toList())
+                        .setIsrNodes(Arrays.stream(pInfo.inSyncReplicas()).map(Node::id).toList())
+                        .setOfflineReplicas(Arrays.stream(pInfo.offlineReplicas()).map(Node::id).toList());
                 pms.add(pm);
             }
             MetadataResponseTopic tm = new MetadataResponseTopic()
@@ -959,8 +959,8 @@ public class TopicAdminTest {
                                 .map(e -> new DescribeConfigsResponseData.DescribeConfigsResourceResult()
                                         .setName(e.getKey())
                                         .setValue(e.getValue()))
-                                .collect(Collectors.toList())))
-                .collect(Collectors.toList());
+                                .toList()))
+                .toList();
         return new DescribeConfigsResponse(new DescribeConfigsResponseData().setThrottleTimeMs(1000).setResults(results));
     }
 
