@@ -186,8 +186,7 @@ public class ConfigCommandIntegrationTest {
     @ClusterTest
     public void testGroupConfigUpdateUsingKraft() throws Exception {
         List<String> alterOpts = Stream.concat(entityOp(Optional.of(defaultGroupName)).stream(),
-                        Stream.of("--entity-type", "groups", "--alter"))
-                .collect(Collectors.toList());
+                        Stream.of("--entity-type", "groups", "--alter")).toList();
         verifyGroupConfigUpdate(alterOpts);
 
         // Test for the --group alias
@@ -217,7 +216,7 @@ public class ConfigCommandIntegrationTest {
     public void testClientMetricsConfigUpdate() throws Exception {
         List<String> alterOpts = Stream.concat(entityOp(Optional.of(defaultClientMetricsName)).stream(),
                         Stream.of("--entity-type", "client-metrics", "--alter"))
-            .collect(Collectors.toList());
+            .toList();
         verifyClientMetricsConfigUpdate(alterOpts);
 
         // Test for the --client-metrics alias
@@ -460,7 +459,7 @@ public class ConfigCommandIntegrationTest {
 
     private void alterConfigWithAdmin(Admin client, Optional<String> resourceName, Map<String, String> config, List<String> alterOpts) {
         String configStr = transferConfigMapToString(config);
-        List<String> bootstrapOpts = quorumArgs().collect(Collectors.toList());
+        List<String> bootstrapOpts = quorumArgs().toList();
         ConfigCommand.ConfigCommandOptions addOpts =
                 new ConfigCommand.ConfigCommandOptions(toArray(bootstrapOpts,
                         entityOp(resourceName),
@@ -472,7 +471,7 @@ public class ConfigCommandIntegrationTest {
 
     private void alterConfigWithAdmin(Admin client, Map<String, String> config, List<String> alterOpts) {
         String configStr = transferConfigMapToString(config);
-        List<String> bootstrapOpts = quorumArgs().collect(Collectors.toList());
+        List<String> bootstrapOpts = quorumArgs().toList();
         ConfigCommand.ConfigCommandOptions addOpts =
                 new ConfigCommand.ConfigCommandOptions(toArray(bootstrapOpts,
                         alterOpts,
@@ -540,7 +539,7 @@ public class ConfigCommandIntegrationTest {
                                                  String groupName,
                                                  Map<String, String> defaultConfigs,
                                                  List<String> alterOpts) throws Exception {
-        List<String> bootstrapOpts = quorumArgs().collect(Collectors.toList());
+        List<String> bootstrapOpts = quorumArgs().toList();
         ConfigCommand.ConfigCommandOptions deleteOpts =
             new ConfigCommand.ConfigCommandOptions(toArray(bootstrapOpts,
                     alterOpts,
@@ -554,7 +553,7 @@ public class ConfigCommandIntegrationTest {
                                                          String clientMetricsName,
                                                          Set<String> defaultConfigs,
                                                          List<String> alterOpts) throws Exception {
-        List<String> bootstrapOpts = quorumArgs().collect(Collectors.toList());
+        List<String> bootstrapOpts = quorumArgs().toList();
         ConfigCommand.ConfigCommandOptions deleteOpts =
             new ConfigCommand.ConfigCommandOptions(toArray(bootstrapOpts,
                     alterOpts,
