@@ -101,7 +101,7 @@ public class QuorumControllerTestEnv implements AutoCloseable {
         int numControllers = logEnv.logManagers().size();
         this.controllers = new ArrayList<>(numControllers);
         try {
-            List<Integer> nodeIds = IntStream.range(0, numControllers).boxed().collect(Collectors.toList());
+            List<Integer> nodeIds = IntStream.range(0, numControllers).boxed().toList();
             for (int nodeId = 0; nodeId < numControllers; nodeId++) {
                 QuorumController.Builder builder = new QuorumController.Builder(nodeId, logEnv.clusterId());
                 builder.setRaftClient(logEnv.logManagers().get(nodeId));
