@@ -396,7 +396,7 @@ public class RaftUtil {
         List<Integer> preferredSuccessors = preferredReplicaKeys
                 .stream()
                 .map(ReplicaKey::id)
-                .collect(Collectors.toList());
+                .toList();
 
         List<EndQuorumEpochRequestData.ReplicaInfo> preferredCandidates = preferredReplicaKeys
                 .stream()
@@ -404,7 +404,7 @@ public class RaftUtil {
                     .setCandidateId(replicaKey.id())
                     .setCandidateDirectoryId(replicaKey.directoryId().orElse(ReplicaKey.NO_DIRECTORY_ID))
                 )
-                .collect(Collectors.toList());
+                .toList();
 
         return new EndQuorumEpochRequestData()
             .setClusterId(clusterId)
@@ -627,7 +627,7 @@ public class RaftUtil {
         return states
             .stream()
             .map(replicaState -> toReplicaState(apiVersion, leaderId, replicaState, currentTimeMs))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private static DescribeQuorumResponseData.ReplicaState toReplicaState(
