@@ -127,7 +127,7 @@ public class AdminUtils {
         if (replicationFactor > brokerMetadatas.size())
             throw new InvalidReplicationFactorException("Replication factor: " + replicationFactor + " larger than available brokers: " + brokerMetadatas.size() + ".");
         if (brokerMetadatas.stream().noneMatch(b -> b.rack.isPresent()))
-            return assignReplicasToBrokersRackUnaware(nPartitions, replicationFactor, brokerMetadatas.stream().map(b -> b.id).collect(Collectors.toList()), fixedStartIndex,
+            return assignReplicasToBrokersRackUnaware(nPartitions, replicationFactor, brokerMetadatas.stream().map(b -> b.id).toList(), fixedStartIndex,
                 startPartitionId);
         else {
             return assignReplicasToBrokersRackAware(nPartitions, replicationFactor, brokerMetadatas, fixedStartIndex,
