@@ -146,7 +146,7 @@ public class KafkaMetricsGroup {
     private static Optional<String> toMBeanName(Map<String, String> tags) {
         List<Map.Entry<String, String>> filteredTags = tags.entrySet().stream()
                 .filter(entry -> !entry.getValue().isEmpty())
-                .collect(Collectors.toList());
+                .toList();
         if (!filteredTags.isEmpty()) {
             String tagsString = filteredTags.stream()
                     .map(entry -> entry.getKey() + "=" + Sanitizer.jmxSanitize(entry.getValue()))
@@ -160,7 +160,7 @@ public class KafkaMetricsGroup {
     private static Optional<String> toScope(Map<String, String> tags) {
         List<Map.Entry<String, String>> filteredTags = tags.entrySet().stream()
                 .filter(entry -> !entry.getValue().isEmpty())
-                .collect(Collectors.toList());
+                .toList();
         if (!filteredTags.isEmpty()) {
             // convert dot to _ since reporters like Graphite typically use dot to represent hierarchy
             String tagsString = filteredTags.stream()
