@@ -126,7 +126,7 @@ public class JsonTest {
 
         List<JsonValue> expected = Stream.of("4.0", "11.1", "44.5")
                 .map(this::parse)
-                .collect(Collectors.toList());
+                .toList();
         assertEquals(expected, results);
     }
 
